2012-03-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* fileRepository.c:
	[ 3499930 ] Check file repository writes

2012-03-08 Narasimha Sharoff <nsharoff@us.ibm.com>

	* objectImpl.c:
	[ 3471814 ] segfault in objectImpl.c:131,ClObjectGetClString
        (Patch by Chris Buccella and Narasimha Sharoff)

2012-03-07 Dave Heller <hellerda@us.ibm.com>

	* httpAdapter.c:
	[ 3498719 ] Better SSL error reporting for sfcb

2012-03-07  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimAccountPassthroughProvider.c:
	[ 3426027 ] cimAccountPassThrough does not set return code

	* interopProvider.c, indCIMXMLHandler.c, test/xmltest/LD_modify*:
	[ 3498932 ] Implement ModifyInstance for CIM_ListenerDestination

2012-03-07 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 3498044 ] RIEnabled conflicts with settable retries

2012-03-07  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* 10_interop.mof, default.reg.in, interopServerProvider.c:
	[ 3498275 ] Remove __Namespace

2012-03-06  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c, providerMgr.c:
	[ 3497950 ] SFCB Semaphore Handling Improvements
	(patch by Viktor Mihajlovski)

	* providerDrv.c, providerMgr.c:
	[ 3497765 ] Better Error Handling in sfcb Provider Manager and Driver
	(patch by Viktor Mihajlovski)

2012-03-05  Narasimhma Sharoff  <nsharoff@us.ibm.com>

	* providerDrv.c, providerMgr.c, sfcBroker.c:
	[ 3497096 ] double free during stopProc

2012-03-05  Narasimhma Sharoff  <nsharoff@us.ibm.com>

	* providerDrv.c, providerMgr.c, providerMgr.h, support.c:
	[ 3416060 ] sigsegv in tool_mm_flush()

2012-03-02  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3496383 ] Faster Return from CBDeliverIndication

2012-03-01 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c, indRetryTest.sh:
	[ 3484083] Exclude SFCBIndicationID 

2012-03-01  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c: