@@ -1,5 +1,5 @@
 /*
- * $Id: brokerUpc.c,v 1.36 2012/03/01 17:46:40 nsharoff Exp $
+ * $Id: brokerUpc.c,v 1.37 2012/03/08 23:32:07 nsharoff Exp $
  *
  * © Copyright IBM Corp. 2005, 2007
  *
@@ -121,6 +121,9 @@ static CMPIStatus deliverIndication(const CMPIBroker* mb, const CMPIContext* ctx
    NativeSelectExp *se=activFilters;
    
    while (se) {
+     
+     void *hc = markHeap(); /* 3497209:78376 */
+
      /* Check for matching FROM class */
      for (x=0; x<se->qs->fcNext; x++) {
        if (CMClassPathIsA(mb, indop, se->qs->fClasses[x], &st)) {
@@ -128,6 +131,9 @@ static CMPIStatus deliverIndication(const CMPIBroker* mb, const CMPIContext* ctx
 	 break;
        }
      }
+
+     releaseHeap(hc); /* 3497209:78376 - relase objs that are no longer reqd */
+
      if (classMatch && se->exp.ft->evaluate(&se->exp,ind,&st)) {
      /*apply a propertyfilter in case the query is not "SELECT * FROM ..." */
         if(se->qs->spNames && se->qs->spNames[0]) {
@@ -145,6 +151,8 @@ static CMPIStatus deliverIndication(const CMPIBroker* mb, const CMPIContext* ctx
 #endif		     
 		 );
          CBInvokeMethod(mb,ctx,op,"_deliver",in,NULL,&st);
+         CMRelease(op); /* 3497209 */
+         CMRelease(in);
       }
       classMatch = 0; /* 3483200 */
       se=se->next;
